Fixed timer problem, spacing with radio buttons, styled score.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Mukta', sans-serif;
 }
 
-#timer {
+#timer-div {
     font-size: 28px;
 }
 
@@ -17,4 +17,10 @@ body {
 
 #final-score {
     font-size: 28px;
+    background-color: #f8f9fa;
+    border-radius: 25px;
+}
+
+input {
+    margin: 10px;
 }
